# veccore

./: .appveyor.yml  .gitlab-ci.yml  .travis.yml  Assert_8h.html  Assert_8h__incl.map  Assert_8h__incl.md5  Assert_8h_source.html  CMakeLists.txt  CTestConfig.cmake  CUDA_8h.html  CUDA_8h_source.html  Common_8h.html  Common_8h_source.html  Deprecated_8h.html  Deprecated_8h.js  Deprecated_8h__incl.map  Deprecated_8h__incl.md5  Deprecated_8h_source.html  Implementation_8h.html  Implementation_8h.js  Implementation_8h__incl.md5  Implementation_8h_source.html  Interface_8h.html  Interface_8h.js  Interface_8h__dep__incl.map  Interface_8h__dep__incl.md5  Interface_8h_source.html  LICENSE  Limits_8h.html  Limits_8h_source.html  README.md  README_8md.html  SIMDSizes_8h.html  SIMDSizes_8h_source.html  SIMD_8h.html  SIMD_8h_source.html  ScalarWrapper_8h.html  ScalarWrapper_8h.js  ScalarWrapper_8h__incl.map  ScalarWrapper_8h_source.html  (+255 more)
.ci/: config.cmake
.ctest/: config.cmake
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml
backend/: cuda.h  scalar.h  vector.h
bench/: CMakeLists.txt  julia.cc  mandelbrot.cc  math_benchmarks.cc  nbody.cc  newton.cc  png.cc  png.h  quadratic.cc  timer.h
bench/gbench/: CMakeLists.txt
bench/gbench/src/: complexity.cc
builtins/Vc/: CMakeLists.txt
builtins/benchmark/: CMakeLists.txt
builtins/googletest/: CMakeLists.txt
builtins/umesimd/: CMakeLists.txt
cmake/: Builtins.cmake  CUDA.cmake  Clang.cmake  CompilerSetup.cmake  FindUMESIMD.cmake  GCC.cmake  GNU.cmake  InstallUMESIMD.cmake  InstallVc.cmake  Intel.cmake  MSVC.cmake  NVHPC.cmake  RecordCmdLine.cmake  TestVecCore.cmake  VecCoreConfig.cmake.in  VecCoreConfigVersion.cmake.in
cmake/Vc/: CMakeLists.txt
cmake/modules/: Clang.cmake  CompilerSetup.cmake  GCC.cmake  Intel.cmake  RequireCXX11.cmake  icc-mic.cmake  icc.cmake
config/: VecCore.h.in
core/: base.h  cuda.h  simd.h
cuda/: CMakeLists.txt  hello.cu
doc/: API.md  CMakeLists.txt  api.md  backend.md  backends.md  publications.md  testing.md
docs/: latest
docs/v0.7.0/: Assert_8h_source.html  CUDA_8h.html  CUDA_8h__dep__incl.map  Common_8h.js  Common_8h__incl.map  Common_8h_source.html  Deprecated_8h.html  Implementation_8h.html  Implementation_8h__dep__incl.map  Implementation_8h__dep__incl.md5  Implementation_8h_source.html  Interface_8h_source.html  Limits_8h.html  Limits_8h__dep__incl.map  Limits_8h__dep__incl.md5  Limits_8h__incl.map  Limits_8h__incl.md5  README_8md.html  SIMDSizes_8h.html  SIMD_8h.html  SIMD_8h.js  SIMD_8h__dep__incl.map  SIMD_8h_source.html  ScalarWrapper_8h.html  ScalarWrapper_8h.js  ScalarWrapper_8h__incl.md5  Scalar_8h.html  Scalar_8h.js  Scalar_8h__incl.map  Scalar_8h__incl.md5  UMESimdArray_8h.html  UMESimdArray_8h_source.html  UMESimdCommon_8h.html  UMESimdCommon_8h.js  UMESimdCommon_8h_source.html  UMESimd_8h.html  Utilities_8h.html  Utilities_8h.js  Utilities_8h__incl.map  VcScalar_8h_source.html  (+157 more)
docs/v0.8.0/: Assert_8h.html  Assert_8h_source.html  Backend_2SIMD_8h.html  Backend_2SIMD_8h_source.html  CUDA_8h.html  CUDA_8h.js  CUDA_8h__dep__incl.md5  CUDA_8h_source.html  Common_8h.html  Common_8h__incl.md5  Common_8h_source.html  Deprecated_8h.html  Deprecated_8h_source.html  Implementation_8h.html  Implementation_8h__dep__incl.map  Implementation_8h__incl.map  Implementation_8h_source.html  Interface_8h.html  Interface_8h__dep__incl.map  Interface_8h__dep__incl.md5  Interface_8h_source.html  Limits_8h.html  Limits_8h__dep__incl.map  Limits_8h_source.html  README_8md.html  SIMDSizes_8h.html  SIMDSizes_8h.js  SIMDSizes_8h_source.html  SIMD_8h.html  SIMD_8h__dep__incl.md5  SIMD_8h_source.html  ScalarWrapper_8h.html  ScalarWrapper_8h.js  ScalarWrapper_8h__incl.map  ScalarWrapper_8h_source.html  Scalar_8h.html  Scalar_8h.js  Scalar_8h__incl.map  Scalar_8h_source.html  Types_8h.html  (+233 more)
docs/v0.8.1/: Assert_8h.html  Assert_8h__incl.map  Assert_8h__incl.md5  Assert_8h_source.html  Backend_2SIMD_8h.html  Backend_2SIMD_8h_source.html  CUDA_8h.html  CUDA_8h__dep__incl.map  CUDA_8h__dep__incl.md5  CUDA_8h_source.html  Common_8h.html  Common_8h__incl.map  Common_8h__incl.md5  Common_8h_source.html  Deprecated_8h.html  Deprecated_8h.js  Deprecated_8h__incl.map  Deprecated_8h__incl.md5  Deprecated_8h_source.html  Implementation_8h.html  Implementation_8h.js  Implementation_8h__dep__incl.map  Implementation_8h__dep__incl.md5  Implementation_8h__incl.map  Implementation_8h__incl.md5  Implementation_8h_source.html  Interface_8h.html  Interface_8h.js  Interface_8h__dep__incl.map  Interface_8h__dep__incl.md5  Interface_8h_source.html  Limits_8h.html  Limits_8h.js  README_8md.html  (+323 more)
examples/: CMakeLists.txt  hello.cu  quadratic.cc  quadsolve.cc  simple.cc
examples/cuda/: CMakeLists.txt  hello.cu
gbenchmarks/: CMakeLists.txt
inc/: BackendGlobal.h  BitSet.h  BoxingOfPrimitives.h  Map.h  RBTree.h  VariableSizeObj.h  VecCoreGlobal.h
include/: Config.in
math/: Matrix3x3.h  Point3D.h  Quaternion.h  Transform.h  Vector3D.h  base.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+35 more)
test/: CMakeLists.txt  README  align.cc  arithmetics.cc  backend.cc  backends.h  composition.cc  constructors.cc  euler.cc  geometry.cc  interface.cc  limits.cc  mask.cc  math.cc  mathtest.cc  new_backend_test.cc  quaternions.cc  test.h  traits.cc  traittest.cc  transform.cc  wrapper.cc
test/cuda/: CMakeLists.txt  hello.cu
test/gtest/: CMakeLists.txt
test/gtest/cmake/: internal_utils.cmake
test/gtest/googletest/test/: googletest-printers-test.cc
test/gtest/include/gtest/internal/: gtest-port.h
test/gtest/src/: gtest.cc
test/gtest/test/: gtest-printers_test.cc
tests/: TestBackends.cpp
(+254 files in other folders)
